Fix test setup: Improve Supabase mocking and test configuration
- Updated test setup to properly mock Supabase auth with hoisted mocks
- Removed redundant Supabase mocks from individual test files to prevent conflicts
- Added auth mock to ExperienceDetails test that requires specific Supabase responses
- Added test timeout configuration to prevent hanging tests
- Fixed mockOnAuthStateChange to be properly hoisted and referenced
- All utility tests (bookingUtils, dateUtils) passing
- useAuth hook tests passing

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -74,6 +77,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
